--- a/Hussain_Motiwala_Classifier2.ipynb
+++ b/Hussain_Motiwala_Classifier2.ipynb
@@ -1209,7 +1209,7 @@
    "id": "2fb08eb7-bab4-4012-bea6-8d992e604b0b",
    "metadata": {},
    "source": [
-    "<h1>Gaussian Naive Bayes</h1>"
+    "<h1>Perceptron</h1>"
    ]
   },
   {
